--- a/src/main/resources/assets/gregtech/lang/ru_ru.lang
+++ b/src/main/resources/assets/gregtech/lang/ru_ru.lang
@@ -56,8 +56,8 @@ gregtech.top.transform_up=Повышает
 gregtech.top.transform_down=§aПонижает§r
 gregtech.top.transform_input=Вход:
 gregtech.top.transform_output=Выход:
-gregtech.top.convert_eu=Преобразование §eFE§r -> §cFE§r
-gregtech.top.convert_fe=Преобразование §cFE§r -> §eFE§r
+gregtech.top.convert_eu=Преобразование §eEU§r -> §cFE§r
+gregtech.top.convert_fe=Преобразование §cFE§r -> §eEU§r
 gregtech.top.invalid_structure=Незаконченная структура
 gregtech.top.valid_structure=Структура собрана
 gregtech.top.obstructed_structure=Неверная структура
@@ -3934,12 +3934,12 @@ gregtech.machine.energy_converter.max.1.name=Преобразователь эн
 gregtech.machine.energy_converter.max.4.name=Преобразователь энергии (4A §cMAX§r)
 gregtech.machine.energy_converter.max.8.name=Преобразователь энергии (8A §cMAX§r)
 gregtech.machine.energy_converter.max.16.name=Преобразователь энергии (16A §cMAX§r)
-gregtech.machine.energy_converter.description=Преобразует Энергию между RF и RF
-gregtech.machine.energy_converter.tooltip_tool_usage=Начиная как RF конвертер, используйте киянку, чтобы переключить
-gregtech.machine.energy_converter.message_conversion_fe=Конвертация RF, в: %d RF, из: %dA %d RF
-gregtech.machine.energy_converter.tooltip_conversion_fe=§cКонвертация RF: §f%,d RF -> %,dA %,d RF (%s§f)
-gregtech.machine.energy_converter.tooltip_conversion_eu=§aКонвертация RF: §f%,dA %,d RF (%s§f) -> %,d RF
-gregtech.machine.energy_converter.message_conversion_eu=Конвертация RF, в: %dA %d RF, Из: %d RF
+gregtech.machine.energy_converter.description=Преобразует Энергию между RF и FE
+gregtech.machine.energy_converter.tooltip_tool_usage=Начиная как FE конвертер, используйте киянку, чтобы переключить
+gregtech.machine.energy_converter.message_conversion_fe=Конвертация FE, в: %d FE, из: %dA %d RF
+gregtech.machine.energy_converter.tooltip_conversion_fe=§cКонвертация FE: §f%,d FE -> %,dA %,d RF (%s§f)
+gregtech.machine.energy_converter.tooltip_conversion_eu=§aКонвертация RF: §f%,dA %,d RF (%s§f) -> %,d FE
+gregtech.machine.energy_converter.message_conversion_eu=Конвертация RF, в: %dA %d RF, Из: %d FE
 
 # Pumps
 gregtech.machine.pump.tooltip=Лучший способ опустошить океаны!
@@ -4795,7 +4795,7 @@ gregtech.recipe.not_consumed=Не расходуется
 gregtech.recipe.chance=Шанс: %s%% +%s%%/уровень
 gregtech.recipe.temperature=Температура: %dK (%s)
 gregtech.recipe.explosive=Взрывчатка: %s
-gregtech.recipe.eu_to_start=Энергии для запуска: %sFE
+gregtech.recipe.eu_to_start=Энергии для запуска: %sEU
 gregtech.recipe.dimensions=Измерение: %s
 gregtech.recipe.cleanroom=Требуется %s
 gregtech.recipe.cleanroom.display_name=Чистая комната
